<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.combustiongroup.burntout.SettingsProfileEdit">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="30%"
        app:layout_aspectRatio="100%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/image_icon_avatar"/>

    <EditText
        android:id="@+id/first_name"
        style="@style/EditText.Common"
        android:layout_below="@id/image"
        android:layout_marginTop="8dp"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/last_name"
        style="@style/EditText.Common"
        android:layout_below="@id/first_name"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        style="@style/EditText.Common"
        android:layout_below="@id/last_name"
        android:layout_marginTop="8dp"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@color/button_green"
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:background="@color/button_red"
        android:layout_below="@id/submit"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
</android.support.percent.PercentRelativeLayout>
