<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.combustiongroup.burntout.ChangePassword">

    <ImageView
        android:id="@+id/prev"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="10dp"
        android:src="@drawable/image_icon_close_white"/>

    <EditText
        android:id="@+id/password_old"
        style="@style/EditText.Common"
        android:hint="@string/old_password"
        android:layout_marginTop="8dp"
        android:layout_below="@id/prev"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password"
        style="@style/EditText.Common"
        android:hint="@string/new_password"
        android:layout_marginTop="8dp"
        android:layout_below="@id/password_old"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_confirm"
        style="@style/EditText.Common"
        android:hint="@string/confirm_password"
        android:layout_marginTop="8dp"
        android:layout_below="@id/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_green"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:layout_below="@id/password_confirm"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>
</RelativeLayout>
