<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:orientation="vertical"
    android:padding="1dp"
    android:background="@android:color/darker_gray"
    tools:context="com.combustiongroup.burntout.ProfileVehicleEditPrompt">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_delete_vehicle"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:padding="8dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textSize="22sp"
        android:layout_marginTop="1dp"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:padding="8dp"
        android:textSize="22sp"
        android:layout_marginTop="1dp"/>
</LinearLayout>
