<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.combustiongroup.burntout.Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/image_icon_close_white"/>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/image_icon_avatar" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_marginTop="30dp"
            android:hint="@string/first_name"
            android:background="@drawable/style_edit_white_rounded"
            android:textColor="@android:color/white"
            android:textColorHint="@color/lighter_black"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:background="@drawable/style_edit_white_rounded"
            android:textColor="@android:color/white"
            android:textColorHint="@color/lighter_black"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:background="@drawable/style_edit_white_rounded"
            android:textColor="@android:color/white"
            android:textColorHint="@color/lighter_black"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/EditText.Common"/>

        <EditText
            android:id="@+id/password_confirm"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            style="@style/EditText.Common"/>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:layout_below="@id/password_confirm"
            android:padding="8dp"
            android:background="@drawable/style_button_green"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
</ScrollView>
