<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/ap_item_vtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/rap_backpic"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/image_icon_logo" />

        <LinearLayout
            android:id="@+id/signup"
            android:layout_below="@id/rap_backpic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="#00000000"
                android:text="@string/don_apos_t_have_an_account"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/signUpButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:text="@string/sign_up_now"
                android:textColor="#f1e472"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_below="@id/signup"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_edit_white_rounded"
            android:ems="10"
            android:textColorHint="@color/lighter_black"
            android:hint="@string/email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@android:color/white" >

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_edit_white_rounded"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/lighter_black"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/loginbutton"
            android:layout_below="@id/password"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style_button_green"
            android:padding="8dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/login"
            android:textColor="#ffffff" />

        <!-- <RelativeLayout
            android:id="@+id/facebook_login"
            android:layout_below="@id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@drawable/style_button_blue">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@android:color/white"
                android:src="@drawable/image_icon_facebook"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in with Facebook"
                android:textColor="@android:color/white"
                android:layout_toEndOf="@id/icon"
                android:layout_marginStart="10dp"
                android:textSize="18sp"/>
        </RelativeLayout> -->

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_facebook"
            android:textColor="@android:color/white"
            android:background="@drawable/style_button_blue"
            android:layout_below="@id/loginbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/SpanishEnglishToggle"
            android:textOn="@string/EnglishSpanishToggle"
            android:id="@+id/toggleLanguages"
            android:background="@color/bottom_blue"
            android:textColor="@color/cardview_light_background"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/forgotpass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.03"
        android:background="#00000000"
        android:text="@string/forgot_your_burnt_out_password"
        android:textColor="#ffffff"
        android:textAllCaps="false" />
</RelativeLayout>
