<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_gray"
    tools:context="com.combustiongroup.burntout.AddVehicle">

    <TextView
        android:id="@+id/circled_step_1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:text="1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/style_number_circle_white"/>

    <TextView
        android:id="@+id/instruction_step_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_vehicle_type"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_toEndOf="@id/circled_step_1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vehicle_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_aspectRatio="178%"
        android:layout_below="@id/circled_step_1"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/circled_step_2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:text="2"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/style_number_circle_white"
        android:layout_below="@id/vehicle_pager"
        android:layout_marginTop="16sp"/>

    <TextView
        android:id="@+id/instruction_step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_vehicle_make_and_model"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_toEndOf="@id/circled_step_2"
        android:layout_alignTop="@id/circled_step_2"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/vehicle_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_edit_white_rounded"
        android:layout_below="@id/circled_step_2"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/lighter_black"
        android:hint="e.g. Ford Contour"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/circled_step_3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:text="3"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/style_number_circle_white"
        android:layout_below="@id/vehicle_make"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/instruction_step_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_license_plate_number"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_toEndOf="@id/circled_step_3"
        android:layout_alignTop="@id/circled_step_3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AK"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/circled_step_3"
        android:background="@drawable/style_edit_white_rounded"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/plate_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/lighter_black"
        android:hint="@string/plate_number"
        android:background="@drawable/style_edit_white_rounded"
        android:layout_alignTop="@id/state"
        android:layout_toEndOf="@id/state"
        android:layout_marginStart="16dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_green"
        android:text="@string/add_vehicle"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>
</android.support.percent.PercentRelativeLayout>
